--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "webpack": "webpack -w",
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --open",
     "test": "start"
   },
   "repository": {
@@ -22,10 +22,19 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "babel-loader": "^8.0.4",
+    "css-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "node-sass": "^4.10.0",
+    "sass-convert": "^0.5.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "babel-preset-es2015": "^6.24.1"
   }
 }
