--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "jquery": "^3.3.1",
     "node-sass": "^4.10.0",
     "sass-convert": "^0.5.2",
     "sass-loader": "^7.1.0",
